# minimum_dependencies

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  requirements-dev.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-to-pypi.yml  scheduled.yml
src/minimum_dependencies/: __init__.py  _core.py  _script.py
src/minimum_dependencies/tests/: __init__.py  common.py  test_core.py  test_script.py
tests/: test_core.py  test_script.py
