[project]
name = "minimum_dependencies"
description = "Get the minimum dependencies of a Python package"
readme = 'README.rst'
license = { file = 'LICENSE' }
authors = [{ name = 'William Jamieson', email = 'help@stsci.edu' }]
requires-python = '>=3.8'
classifiers = [
    "License :: OSI Approved :: BSD License",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Development Status :: 5 - Production/Stable',
]
dynamic = [
  'version',
]
dependencies = [
  "importlib-metadata>=4.11.4",
  "packaging>=23",
  "requests>=2.25",
  "typer>=0.7",
]
[project.optional-dependencies]
other = [
  "astropy[all]>=5",
]
test = [
  "pytest>=6",
  "pytest-doctestplus>=0.12",
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
  "setuptools>=60",
  "setuptools_scm[toml]>=3.4",
  "wheel",
]

[tool.setuptools.packages.find]
where = ['src']

[project.entry-points]
console_scripts = {minimum_dependencies = 'minimum_dependencies._script:main'}

[tool.setuptools_scm]
write_to = "src/minimum_dependencies/_version.py"

[tool.pytest.ini_options]
testpaths = ['src', 'README.rst']
minversion = 4.6
norecursedirs = ['build']
doctest_plus = 'enabled'
filterwarnings = [
    'error',
    'ignore:numpy.ndarray size changed:RuntimeWarning',
]
# Configuration for pytest-doctestplus
text_file_format = 'rst'
addopts = '--color=yes --doctest-rst'

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    'pragma: no cover',
    # Don't complain about packages we have installed
    'except ImportError',
    # Don't complain if tests don't hit assertions
    'raise AssertionError',
    'raise NotImplementedError',
    # Don't complain about script hooks
    'def main\(.*\):',
    # Ignore branches that don't pertain to this version of Python
    'pragma: py{ ignore_python_version }',
]

[tool.black]
line-length = 88
force-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
filter_files = true
line_length = 88

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["ALL"]
extend-ignore = ["I"]

[tool.ruff.per-file-ignores]
"test_*.py" = ["S101", "ANN"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.codespell]
skip="*.pdf,.tox,build,./tags,.git"
# ignore-words-list="""
# """
